fixed issues in IE (banner alignment)

--- a/sass/lsx/_homepage.scss
+++ b/sass/lsx/_homepage.scss
@@ -405,7 +405,6 @@
 	.page-banner {
 		display: flex;
 		align-items: center;
-		justify-content: center;
 		position: relative;
 		padding: 0;
 		min-height: 100vh;
